# policy-compliance

./: .gitignore  .gitlab-ci.yml  README.md  assessment.md  inventory.csv  pyproject.toml  requirements.txt
policies/: fabric-consistency.yml  security-hardening.yml
src/voss_audit/: __init__.py  cli.py  collector.py  engine.py  inventory.py  report.py  rules.py
tests/: conftest.py  test_cli.py  test_engine.py  test_inventory.py  test_report.py  test_rules.py
