[project]
name = "voss-audit"
version = "0.1.0"
description = "Policy compliance auditing for Extreme VOSS/VSP switches, built for GitLab CI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "netmiko>=4.3",
    "PyYAML>=6.0",
]

[project.scripts]
voss-audit = "voss_audit.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voss_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
